fixing floating embeds and topnav z-index

--- a/LT.css
+++ b/LT.css
@@ -119,6 +119,7 @@ table th {
   position: fixed;
   width: 100%;
   height: 60px;
+  z-index:10;
 }
 
 .topbar{
